--- a/Cell_Tiering_Datahub.ipynb
+++ b/Cell_Tiering_Datahub.ipynb
@@ -9,12 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Define Batches\n",
-    "batches = \"UCB004A[A-L]\"     #|UCB003AE-US00-24|UCB003AF-US00-24|UCB003AF-US00-26|UCB003AG-US00-02|UCB003AG-US00-15|UCB003AG-US00-34|UCB003AG-US00-35|\"\n",
+    "batches = \"UCB004AM\"     #|UCB003AE-US00-24|UCB003AF-US00-24|UCB003AF-US00-26|UCB003AG-US00-02|UCB003AG-US00-15|UCB003AG-US00-34|UCB003AG-US00-35|\"\n",
     "\n",
     "# Define Unit Cells in ML\n",
     "Layers = 12  # Number of unit cells in each MultiSlayer pouch\n",
@@ -35,15 +35,35 @@
     "\n",
     "\n",
     "#Tier and pair specific cells (CustomList) instead of batches\n",
-    "UseCustomList = 1\n",
+    "UseCustomList = 0 #needs to be 1 to only Tier and Pair the specified cells below\n",
     "#This is the list of specific cells you want to Tier and Pair\n",
-    "CustomList = ['UCB004AJ-US00-76', 'UCB004AJ-US00-63',\n",
-    "'UCB004AK-US00-38', 'UCB004AJ-US00-75', 'UCB004AJ-US00-60', 'UCB004AJ-US00-77',\n",
-    "'UCB004AK-US00-94', 'UCB004AK-US00-45', 'UCB004AJ-US00-78', 'UCB004AJ-US00-64',\n",
-    "'UCB004AK-US00-43', 'UCB004AJ-US00-19', 'UCB004AH-US00-53', 'UCB004AH-US00-93',\n",
-    "'UCB004AK-US00-09', 'UCB004AL-US00-50', 'UCB004AK-US00-02', 'UCB004AK-US00-21',\n",
-    "'UCB004AJ-US00-105', 'UCB004AL-US00-52', 'UCB004AJ-US00-103', 'UCB004AJ-US00-51',\n",
-    "'UCB004AL-US00-34', 'UCB004AL-US00-86'] \n",
+    "\n",
+    "CustomList = ['UCB004AM-US00-33', 'UCB004AM-US00-34', 'UCB004AM-US00-35',\n",
+    "'UCB004AM-US00-36', 'UCB004AM-US00-39', 'UCB004AM-US00-40',\n",
+    "'UCB004AM-US00-38', 'UCB004AM-US00-41', 'UCB004AM-US00-42',\n",
+    "'UCB004AM-US00-46', 'UCB004AM-US00-47', 'UCB004AM-US00-44',\n",
+    "'UCB004AM-US00-50', 'UCB004AM-US00-49', 'UCB004AM-US00-52',\n",
+    "'UCB004AM-US00-53', 'UCB004AM-US00-51', 'UCB004AM-US00-54',\n",
+    "'UCB004AM-US00-60', 'UCB004AM-US00-59', 'UCB004AM-US00-63',\n",
+    "'UCB004AM-US00-64', 'UCB004AM-US00-67', 'UCB004AM-US00-70',\n",
+    "'UCB004AM-US00-65', 'UCB004AM-US00-66', 'UCB004AM-US00-69',\n",
+    "'UCB004AM-US00-68', 'UCB004AM-US00-73', 'UCB004AM-US00-74',\n",
+    "'UCB004AM-US00-75', 'UCB004AM-US00-76', 'UCB004AM-US00-77',\n",
+    "'UCB004AM-US00-79', 'UCB004AM-US00-80', 'UCB004AM-US00-78',\n",
+    "'UCB004AM-US00-81', 'UCB004AM-US00-83', 'UCB004AM-US00-82',\n",
+    "'UCB004AM-US00-84', 'UCB004AM-US00-85', 'UCB004AM-US00-86',\n",
+    "'UCB004AM-US00-88', 'UCB004AM-US00-87', 'UCB004AM-US00-90',\n",
+    "'UCB004AM-US00-92', 'UCB004AM-US00-93', 'UCB004AM-US00-96',\n",
+    "'UCB004AM-US00-95', 'UCB004AM-US00-99', 'UCB004AM-US00-100',\n",
+    "'UCB004AM-US00-106', 'UCB004AM-US00-31', 'UCB004AM-US00-29',\n",
+    "'UCB004AM-US00-25', 'UCB004AM-US00-28', 'UCB004AM-US00-01',\n",
+    "'UCB004AM-US00-04', 'UCB004AM-US00-05', 'UCB004AM-US00-07',\n",
+    "'UCB004AM-US00-09', 'UCB004AM-US00-10', 'UCB004AM-US00-12',\n",
+    "'UCB004AM-US00-06', 'UCB004AM-US00-14', 'UCB004AM-US00-15',\n",
+    "'UCB004AM-US00-17', 'UCB004AM-US00-18', 'UCB004AM-US00-19',\n",
+    "'UCB004AM-US00-22', 'UCB004AM-US00-21', 'UCB004AM-US00-24']\n",
+    "\n",
+    "\n",
     "\n",
     "#Grouping Criteria\n",
     "ASR_range_limit = 2.0   #threshold for ASR range in ML \n",
@@ -60,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -137,19 +157,22 @@
     "    \"MedDcASR\",\n",
     "    \"DischargeCapacity\"\n",
     "]\n",
-    "dfc = dfc[dfc['US_id'].str.contains(batches, na=False)].sort_values([\"RunIndex\",\"CycleIndex\"])[cols]\n",
     "\n",
-    "# Keep cells from batches of interest and remove those that failed screening\n",
-    "filtered_dfctq = dfctq[dfctq['US_id'].str.contains(batches, na=False)] #keep cells that are from the batches of interest\n",
-    "filtered_dfmr = dfmr[dfmr['US_id'].str.contains(batches, na=False)] #keep only cells that are from the batches of interest\n",
-    "\n",
-    "if ShowOnlyYield == 1:\n",
-    "    yielded_dfctq = filtered_dfctq[filtered_dfctq['unit_cell_test_yield'] == 1] #keep cells that yielded\n",
-    "    yielded_dfmr = filtered_dfmr[filtered_dfmr['unit_cell_test_yield'] == 1] #keep cells that yielded\n",
-    "\n",
+    "#Filter datahub rows by batches \n",
+    "if UseCustomList != 1:\n",
+    "    # Keep cells from batches of interest and remove those that failed screening\n",
+    "    filtered_dfctq = dfctq[dfctq['US_id'].str.contains(batches, na=False)] #keep cells that are from the batches of interest\n",
+    "    filtered_dfmr = dfmr[dfmr['US_id'].str.contains(batches, na=False)] #keep only cells that are from the batches of interest\n",
+    "    dfc = dfc[dfc['US_id'].str.contains(batches, na=False)].sort_values([\"RunIndex\",\"CycleIndex\"])[cols]\n",
+    "    if ShowOnlyYield == 1:\n",
+    "        yielded_dfctq = filtered_dfctq[filtered_dfctq['unit_cell_test_yield'] == 1] #keep cells that yielded\n",
+    "        yielded_dfmr = filtered_dfmr[filtered_dfmr['unit_cell_test_yield'] == 1] #keep cells that yielded\n",
+    "        \n",
+    "#Filter datahub rows by custom list\n",
     "if UseCustomList == 1:\n",
-    "    yielded_dfctq = dfctq[dfctq['US_id'].isin(CustomList)] #placeholder\n",
-    "    yielded_dfmr = dfmr[dfmr['US_id'].isin(CustomList)] #placeholder\n",
+    "    yielded_dfctq = dfctq[dfctq['US_id'].isin(CustomList)]\n",
+    "    yielded_dfmr = dfmr[dfmr['US_id'].isin(CustomList)]\n",
+    "    dfc = dfc[dfc['US_id'].isin(CustomList)][cols]\n",
     "    batches = \"CustomList\"\n",
     "    "
    ]
@@ -170,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,69 +525,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing group starting at rank [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]: ['UCB004AK-US00-09', 'UCB004AK-US00-94', 'UCB004AK-US00-21', 'UCB004AK-US00-45', 'UCB004AK-US00-02', 'UCB004AL-US00-86', 'UCB004AJ-US00-105', 'UCB004AL-US00-34', 'UCB004AJ-US00-19', 'UCB004AK-US00-43', 'UCB004AK-US00-38', 'UCB004AL-US00-50']\n",
-      "ASR range: 1.3962040000000009, ASR mean-min: 0.6203555000000023\n",
-      "Minimum ASR is too low at difference of 0.6203555000000023, replacing problem cell: UCB004AL-US00-86\n",
-      "Replacing UCB004AL-US00-86 with UCB004AL-US00-52\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.5134905000000032\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-103\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.5222893333333367\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-51\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.5082380000000022\n",
-      "Replacing UCB004AL-US00-86 with UCB004AH-US00-93\n",
-      "ASR range: 1.3713060000000006, ASR mean-min: 0.5975323333333371\n",
-      "Replacing UCB004AL-US00-86 with UCB004AH-US00-53\n",
-      "ASR range: 1.3562760000000011, ASR mean-min: 0.5837548333333373\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-75\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.5950669166666671\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-60\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.6037693333333358\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-78\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.596163500000003\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-77\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.5959522499999999\n",
-      "No more rows in remainder to replace UCB004AL-US00-86.\n",
-      "Processing group starting at rank [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]: ['UCB004AK-US00-94', 'UCB004AK-US00-21', 'UCB004AK-US00-45', 'UCB004AK-US00-02', 'UCB004AL-US00-86', 'UCB004AJ-US00-105', 'UCB004AL-US00-34', 'UCB004AJ-US00-19', 'UCB004AK-US00-43', 'UCB004AK-US00-38', 'UCB004AL-US00-50', 'UCB004AL-US00-52']\n",
-      "ASR range: 1.3962040000000009, ASR mean-min: 0.6280598333333351\n",
-      "Minimum ASR is too low at difference of 0.6280598333333351, replacing problem cell: UCB004AL-US00-86\n",
-      "Replacing UCB004AL-US00-86 with UCB004AL-US00-52\n",
-      "Found 2 duplicate(s) of 'Cell ID' in candidate_group. Incrementing i_mean_min.\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-103\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.529993666666666\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-51\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.5159423333333351\n",
-      "Replacing UCB004AL-US00-86 with UCB004AH-US00-93\n",
-      "ASR range: 1.3713060000000006, ASR mean-min: 0.60523666666667\n",
-      "Replacing UCB004AL-US00-86 with UCB004AH-US00-53\n",
-      "ASR range: 1.3562760000000011, ASR mean-min: 0.5914591666666666\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-75\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.60277125\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-60\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.6114736666666651\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-78\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.6038678333333323\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-77\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.6036565833333363\n",
-      "No more rows in remainder to replace UCB004AL-US00-86.\n",
-      "Processing group starting at rank [3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]: ['UCB004AK-US00-21', 'UCB004AK-US00-45', 'UCB004AK-US00-02', 'UCB004AL-US00-86', 'UCB004AJ-US00-105', 'UCB004AL-US00-34', 'UCB004AJ-US00-19', 'UCB004AK-US00-43', 'UCB004AK-US00-38', 'UCB004AL-US00-50', 'UCB004AL-US00-52', 'UCB004AJ-US00-103']\n",
-      "ASR range: 1.3962040000000009, ASR mean-min: 0.5582832500000023\n",
-      "Minimum ASR is too low at difference of 0.5582832500000023, replacing problem cell: UCB004AL-US00-86\n",
-      "Replacing UCB004AL-US00-86 with UCB004AL-US00-52\n",
-      "Found 2 duplicate(s) of 'Cell ID' in candidate_group. Incrementing i_mean_min.\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-103\n",
-      "Found 2 duplicate(s) of 'Cell ID' in candidate_group. Incrementing i_mean_min.\n",
-      "Replacing UCB004AL-US00-86 with UCB004AJ-US00-51\n",
-      "ASR range: 1.2671799999999998, ASR mean-min: 0.44616575000000225\n",
-      "Established group starting at rank [3, 4, 5, 15, 7, 8, 9, 10, 11, 12, 13, 14]: ['UCB004AK-US00-21', 'UCB004AK-US00-45', 'UCB004AK-US00-02', 'UCB004AJ-US00-51', 'UCB004AJ-US00-105', 'UCB004AL-US00-34', 'UCB004AJ-US00-19', 'UCB004AK-US00-43', 'UCB004AK-US00-38', 'UCB004AL-US00-50', 'UCB004AL-US00-52', 'UCB004AJ-US00-103']\n",
-      "Rows in remainder after processing: 9\n",
-      "Final Tier 1 DataFrame has 21 rows.\n"
+      "No valid groups were formed. Creating an empty DataFrame.\n",
+      "Final Tier 1 DataFrame has 0 rows.\n"
      ]
     }
    ],
@@ -749,9 +718,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Tier 1 dataframe to rearrange\n"
+     ]
+    }
+   ],
    "source": [
     "def pyramid_order(group):\n",
     "    # Check if the group number is 'Remainder'\n",
@@ -811,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1053,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
