Implement cell "search/filter" feature, color coded rows by tier

--- a/Cell_Sorting_Datahub.ipynb
+++ b/Cell_Sorting_Datahub.ipynb
@@ -9,12 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the tray name(s) for filtering\n",
-    "tray_name = [\"0095584-1.6\"]   # \"0095584-1.6\" is the prefix for metrology trays we currently use\n",
+    "\n",
+    "batches = \"UCB007|UCB008|UCB009|UCB010\" #specify which batches you want to filter, leave blank if you want to see all batches (\" \")\n",
+    "\n",
+    "tray_name = [\"0095584-1.6\", \"0086469-1.0-1\"]   # \"0095584-1.6\" is the prefix for metrology trays we currently use\n",
+    "\n",
     "LastFewDays = 2 #the amount of days we want to check for scan history "
    ]
   },
@@ -27,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +41,10 @@
     "from qsdc.client import Client\n",
     "import met_client as app\n",
     "from datetime import datetime, timedelta\n",
+    "import re\n",
+    "from openpyxl import load_workbook\n",
+    "from openpyxl.styles import PatternFill\n",
+    "\n",
     "\n",
     "# Create the QuantumScape data client\n",
     "qs_client = Client()\n",
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,40 +80,47 @@
     "# Filter the data by 'idtray' to keep only rows with 'tray_unit_cell_automation_4x3_001'\n",
     "data = data[data['idtray'] == 'tray_unit_cell_automation_4x3_001']\n",
     "\n",
+    "\n",
+    "# Convert the list 'batches' into a regex pattern\n",
+    "#batches_pattern = \"|\".join(map(re.escape, batches))  # Ensures special characters are escaped\n",
+    "# Apply the regex pattern in str.contains()\n",
+    "data = data[data['sample_name'].str.contains(batches, regex=True, na=False)]\n",
+    "\n",
+    "\n",
     "# Keep only specific columns\n",
     "keep_columns = ['barcode_data', 'sample_name', 'row_index', 'col_index', 'modified']\n",
     "newdata_group_1 = data.loc[:, keep_columns]\n",
     "\n",
     "# Rename 'barcode_data' to 'tray_id'\n",
-    "newdata_group_1 = newdata_group_1.rename(columns={'barcode_data': 'tray_id'})\n",
+    "newdata_group_1 = newdata_group_1.rename(columns={'barcode_data': 'tray_id', 'modified':'Scan Time'})\n",
     "\n",
     "# Convert 'col_index' to integers to remove the decimal point\n",
     "newdata_group_1['col_index'] = newdata_group_1['col_index'].astype(int)\n",
     "\n",
     "# Reorder columns to move 'sample_name' to the first position\n",
-    "newdata_group_1 = newdata_group_1[['sample_name', 'tray_id', 'row_index', 'col_index', 'modified']]\n",
+    "newdata_group_1 = newdata_group_1[['sample_name', 'tray_id', 'row_index', 'col_index', 'Scan Time']]\n",
+    "\n",
+    "\n",
+    "newdata_group_1 = newdata_group_1.loc[newdata_group_1.groupby('sample_name')['Scan Time'].idxmax()]\n",
     "\n",
     "# Sort the data with 'modified' in descending order and other columns in ascending order\n",
-    "TrayHistory = newdata_group_1.sort_values(by=['modified', 'tray_id', 'row_index', 'col_index'], \n",
+    "TrayHistory = newdata_group_1.sort_values(by=['Scan Time', 'tray_id', 'row_index', 'col_index'], \n",
     "                                             ascending=[False, True, True, True])\n",
     "\n",
     "\n",
-    "# Convert 'modified' column to datetime format if not already\n",
-    "TrayHistory['modified'] = pd.to_datetime(TrayHistory['modified'])\n",
+    "# Convert 'Scan Time' column to datetime format if not already\n",
+    "TrayHistory['Scan Time'] = pd.to_datetime(TrayHistory['Scan Time'])\n",
     "\n",
     "# Compute the cutoff date\n",
     "cutoff_date = datetime.now() - timedelta(days=LastFewDays)\n",
     "\n",
-    "# Filter rows where 'modified' is within the last 'x' days abd 'sample_name' contains \"US\"\n",
+    "# Filter rows where 'Scan Time' is within the last 'x' days abd 'sample_name' contains \"US\"\n",
     "TrayHistory= TrayHistory[\n",
-    "    (TrayHistory['modified'] >= cutoff_date) & \n",
+    "    (TrayHistory['Scan Time'] >= cutoff_date) & \n",
     "    (TrayHistory['sample_name'].str.contains(\"US\", na=False))\n",
     "]\n",
     "\n",
-    "\n",
-    "# Copy the combined result to the clipboard\n",
-    "TrayHistory.to_clipboard(index=False)\n",
-    "#%%\n"
+    "\n"
    ]
   },
   {
@@ -117,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\EDM02\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\qsdc\\datahub\\datahub.py:88: DtypeWarning: Columns (39,40,41,46) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "c:\\Users\\EDM02\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\qsdc\\datahub\\datahub.py:88: DtypeWarning: Columns (5,15,39,40) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  return pd.read_csv(bytesIO(blob_bytes))\n"
      ]
     }
@@ -190,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +314,7 @@
     "CellTiering['Alignment'] = CellTiering['Alignment'].fillna(0)  # Replace NaN with 0 (or another placeholder)\n",
     "CellTiering['Alignment'] = CellTiering['Alignment'].astype(int) #convert to integer\n",
     "CellTiering['Anode'] = CellTiering['Anode'].fillna(0)  # Replace NaN with 0 (or another placeholder)\n",
-    "CellTiering['Anode'] = CellTiering['Anode'].astype(int) #convert to integer\n",
+    "CellTiering['Anode'] = CellTiering['Anode'].astype(int) #convert to intege\n",
     "CellTiering['Thickness'] = CellTiering['Thickness'].fillna(0)  # Replace NaN with 0 (or another placeholder)\n",
     "CellTiering['Thickness'] = CellTiering['Thickness'].astype(int) #convert to integer\n",
     "CellTiering['Edge Wetting'] = CellTiering['Edge Wetting'].fillna(0)\n",
@@ -308,46 +323,52 @@
     "CellTiering['Cell Tier'] = CellTiering[columns_to_consider].max(axis=1) #Update cell tier based on avaialable tiering metrics\n",
     "missing_or_zero = (CellTiering[columns_to_consider].isnull() | (CellTiering[columns_to_consider] == 0)).any(axis=1) #Identify cells that are missing data\n",
     "CellTiering.loc[missing_or_zero, 'Cell Tier'] = 0 # Update 'Cell Status' for these rows\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "RecentCellTiers = TrayHistory.merge(CellTiering, left_on='sample_name', right_on='Cell ID', how='left')\n",
-    "RecentCellTiers['Matrix'] = RecentCellTiers['Alignment'].apply(lambda x: 'Done' if x in [1, 2, 3] else 'Needs Matrix')\n",
-    "RecentCellTiers['HiFi'] = RecentCellTiers['Anode'].apply(lambda x: 'Done' if x in [1, 2, 3] else 'Needs HiFi')\n",
     "\n",
-    "RecentCellTiers = RecentCellTiers[['sample_name', 'tray_id', 'row_index', 'col_index', 'modified','Matrix', 'HiFi', 'Cell Tier']] "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['sample_name', 'tray_id', 'row_index', 'col_index', 'modified',\n",
-       "       'Cell ID', 'Batch', 'Cell Status', 'Cell Tier', 'Edge Wetting',\n",
-       "       'Thickness', 'Alignment', 'Anode', 'Film-to-Film Distance',\n",
-       "       'Cathode Mass', 'median_contour_catholyte_pct_us',\n",
-       "       'center_normalized_0_5mm_eroded_rect_outside_median_us', 'Matrix',\n",
-       "       'HiFi'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "RecentCellTiers.columns"
+    "RecentCellTiers = TrayHistory.merge(CellTiering, left_on='sample_name', right_on='Cell ID', how='left')\n",
+    "RecentCellTiers['Matrix'] = RecentCellTiers['Alignment'].apply(lambda x: 'Done' if x in [1, 2, 3] else 'Waiting for Matrix')\n",
+    "RecentCellTiers['HiFi'] = RecentCellTiers['Anode'].apply(lambda x: 'Done' if x in [1, 2, 3] else 'Waiting for HiFi')\n",
+    "RecentCellTiers = RecentCellTiers[['sample_name', 'tray_id', 'row_index', 'col_index', 'Scan Time','Matrix', 'HiFi', 'Cell Tier']] \n",
+    "\n",
+    "\n",
+    "current_date = datetime.now().strftime('%Y-%m-%d')\n",
+    "output_name = f'{current_date}_Sorting list from last {LastFewDays} days.xlsx'\n",
+    "RecentCellTiers.to_excel(output_name, index=False)\n",
+    "RecentCellTiers\n",
+    "\n",
+    "# Save DataFrame to Excel\n",
+    "output_name = f'{current_date}_Sorting list from last {LastFewDays} days.xlsx'\n",
+    "RecentCellTiers.to_excel(output_name, index=False)\n",
+    "\n",
+    "# Load the workbook and worksheet\n",
+    "wb = load_workbook(output_name)\n",
+    "ws = wb.active\n",
+    "\n",
+    "# Define color mappings\n",
+    "tier_colors = {\n",
+    "    0: \"CECECE\",  # Grey\n",
+    "    1: \"7DDA58\",  # Light Green\n",
+    "    2: \"FFECA1\",  # Yellow\n",
+    "    3: \"EFC3CA\"   # Red\n",
+    "}\n",
+    "\n",
+    "# Find the column index of \"Cell Tier\"\n",
+    "tier_column_index = None\n",
+    "for col_num, col_cells in enumerate(ws.iter_cols(min_row=1, max_row=1), start=1):\n",
+    "    if col_cells[0].value == \"Cell Tier\":\n",
+    "        tier_column_index = col_num\n",
+    "        break\n",
+    "\n",
+    "# Apply color formatting to the entire row\n",
+    "if tier_column_index:\n",
+    "    for row in ws.iter_rows(min_row=2, max_row=ws.max_row):\n",
+    "        cell = row[tier_column_index - 1]  # Get the \"Cell Tier\" cell\n",
+    "        if cell.value in tier_colors:\n",
+    "            fill = PatternFill(start_color=tier_colors[cell.value], end_color=tier_colors[cell.value], fill_type=\"solid\")\n",
+    "            for cell_in_row in row:  # Apply color to the entire row\n",
+    "                cell_in_row.fill = fill\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save(output_name)\n"
    ]
   },
   {
