updated input description

--- a/Cell_Sorting_Datahub.ipynb
+++ b/Cell_Sorting_Datahub.ipynb
@@ -17,7 +17,7 @@
     "\n",
     "batches = \"UCB007|UCB008|UCB009|UCB010\" #specify which batches you want to filter, leave blank if you want to see all batches (\" \")\n",
     "\n",
-    "tray_name = [\"0095584-1.6\", \"0086469-1.0-1\"]   # \"0095584-1.6\" is the prefix for metrology trays we currently use\n",
+    "tray_name = [\"0095584-1.6\", \"0086469-1.0-1\"]   # prefix for metrology trays and thermoform trays\n",
     "\n",
     "LastFewDays = 2 #the amount of days we want to check for scan history "
    ]
