Update excel spreadsheet format

--- a/Cell_Sorting_Datahub.ipynb
+++ b/Cell_Sorting_Datahub.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "from datetime import datetime, timedelta\n",
     "import re\n",
     "from openpyxl import load_workbook\n",
-    "from openpyxl.styles import PatternFill\n",
+    "from openpyxl.styles import PatternFill, Alignment\n",
     "\n",
     "\n",
     "# Create the QuantumScape data client\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
     "        tier_column_index = col_num\n",
     "        break\n",
     "\n",
-    "# Apply color formatting to the entire row\n",
+    "# Apply color formatting to the entire row & center-align text\n",
     "if tier_column_index:\n",
     "    for row in ws.iter_rows(min_row=2, max_row=ws.max_row):\n",
     "        cell = row[tier_column_index - 1]  # Get the \"Cell Tier\" cell\n",
@@ -366,9 +366,24 @@
     "            fill = PatternFill(start_color=tier_colors[cell.value], end_color=tier_colors[cell.value], fill_type=\"solid\")\n",
     "            for cell_in_row in row:  # Apply color to the entire row\n",
     "                cell_in_row.fill = fill\n",
+    "                cell_in_row.alignment = Alignment(horizontal='center', vertical='center')  # Center-align text\n",
+    "\n",
+    "# Auto-adjust column widths based on content length\n",
+    "for col in ws.columns:\n",
+    "    max_length = 0\n",
+    "    col_letter = col[0].column_letter  # Get column letter (e.g., 'A', 'B', etc.)\n",
+    "    for cell in col:\n",
+    "        try:\n",
+    "            if cell.value:\n",
+    "                max_length = max(max_length, len(str(cell.value)))\n",
+    "        except:\n",
+    "            pass\n",
+    "    adjusted_width = max_length + 2  # Add padding for readability\n",
+    "    ws.column_dimensions[col_letter].width = adjusted_width\n",
     "\n",
     "# Save the workbook\n",
-    "wb.save(output_name)\n"
+    "wb.save(output_name)\n",
+    "\n"
    ]
   },
   {
