--- a/Cell_Sorting_Datahub.ipynb
+++ b/Cell_Sorting_Datahub.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,11 +96,10 @@
     "\n",
     "# Convert 'col_index' to integers to remove the decimal point\n",
     "newdata_group_1['col_index'] = newdata_group_1['col_index'].astype(int)\n",
+    "#newdata_group_1['Batch']= newdata_group_1['sample_name'].str[:8]  #Group by experiment\n",
     "\n",
     "# Reorder columns to move 'sample_name' to the first position\n",
     "newdata_group_1 = newdata_group_1[['sample_name', 'tray_id', 'row_index', 'col_index', 'Scan Time']]\n",
-    "\n",
-    "\n",
     "newdata_group_1 = newdata_group_1.loc[newdata_group_1.groupby('sample_name')['Scan Time'].idxmax()]\n",
     "\n",
     "# Sort the data with 'modified' in descending order and other columns in ascending order\n",
@@ -132,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +326,7 @@
     "RecentCellTiers = TrayHistory.merge(CellTiering, left_on='sample_name', right_on='Cell ID', how='left')\n",
     "RecentCellTiers['Matrix'] = RecentCellTiers['Alignment'].apply(lambda x: 'Done' if x in [1, 2, 3] else 'Waiting for Matrix')\n",
     "RecentCellTiers['HiFi'] = RecentCellTiers['Anode'].apply(lambda x: 'Done' if x in [1, 2, 3] else 'Waiting for HiFi')\n",
-    "RecentCellTiers = RecentCellTiers[['sample_name', 'tray_id', 'row_index', 'col_index', 'Scan Time','Matrix', 'HiFi', 'Cell Tier']] \n",
+    "RecentCellTiers = RecentCellTiers[['sample_name', 'Batch', 'tray_id', 'row_index', 'col_index', 'Scan Time','Matrix', 'HiFi', 'Cell Tier']] \n",
     "\n",
     "\n",
     "current_date = datetime.now().strftime('%Y-%m-%d')\n",
